# cinebar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  cinebar-generator.cpp  cinebar-generator.h  cinebar__generator_8cpp.html  cinebar__generator_8cpp.js  cinebar__generator_8cpp_source.html  cinebar__generator_8h.html  cinebar__generator_8h.js  cinebar__generator_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  frame__extractor_8cpp.html  frame__extractor_8cpp.js  frame__extractor_8cpp_source.html  frame__extractor_8h.html  frame__extractor_8h.js  frame__extractor_8h_source.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  logger_8cpp.html  logger_8cpp.js  logger_8cpp_source.html  logger_8h.html  logger_8h.js  logger_8h_source.html  main_8cpp.html  main_8cpp_source.html  menudata.js  namespaceapp__frame__extractor.html  namespaceapp__logger.html  (+39 more)
src/: CMakeLists.txt  cinebar-generator.cpp  cinebar_generator.cpp  cinebar_generator.h  frame_extractor.cpp  frame_extractor.h  logger.cpp  main.cpp  parser.cpp  parser.h  types.h  video_processor.cpp  video_processor.h
src/gui/: CMakeLists.txt  central_widget.cpp  gui_helper.h  main_window.cpp  main_window.h  mainwindow.cpp
src/gui/model/: file_browser_model.h  media_filter_proxy.h
src/gui/view/: barcode_view.cpp  barcode_view.h
src/gui/widget/: central_widget.cpp  central_widget.h  (+2 more)
src/utils/: CMakeLists.txt  constants.h  exceptions.h  logger.cpp  logger.h
(+72 files in other folders)
